kubernetes/apps/traefik-system/traefik-system/app/set-internal-ingress-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: update-ingress-annotations
  annotations:
    policies.kyverno.io/title: Update ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses, external-dns,
      and sets an explicit RFC1918 whitelist for any ingresses
      that are not not exposed to the internet.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: websecure
      match:
        any:
          - resources:
              kinds: ["Ingress"]
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(traefik.ingress.kubernetes.io/router.entrypoints): websecure

    - name: internal
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                auth.home.arpa/internal: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(traefik.ingress.kubernetes.io/router.middlewares): "traefik-system-internal@kubernetescrd"

    - name: external-auth
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                auth.home.arpa/external-auth: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns/is-public): "true"
              +(external-dns.alpha.kubernetes.io/target): "${SECRET_DOMAIN_NAME}"
              +(traefik.ingress.kubernetes.io/router.middlewares): "traefik-system-external-auth@kubernetescrd"

    - name: external
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                auth.home.arpa/external: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns/is-public): "true"
              +(external-dns.alpha.kubernetes.io/target): "${SECRET_DOMAIN_NAME}"
              +(traefik.ingress.kubernetes.io/router.middlewares): "traefik-system-cloudflare-only@kubernetescrd"
